[package]
name = "nnc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.1"
clap = { version = "3.2.8", features = ["derive"] }
reqwest = { version = "0.11.11", features = ["blocking", "json"] }
serde = { version = "1.0.137", features = ["derive"] }
anyhow = "1.0.58"
chrono = "0.4"
open = "3.0.1"
